@@ -1,3 +1,12 @@
+2018-07-11  Christopher Reid  <chris.reid@sony.com>
+
+        [Win][WebKit] Disable accelerated compositing until it is supported
+        https://bugs.webkit.org/show_bug.cgi?id=187503
+
+        Reviewed by Žan Doberšek.
+
+        * UIProcess/win/WebView.cpp:
+
 2018-07-10  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r233480): Mail contents flash black when activating
